Removed bold font on the startups webform, fixed overflow on the startups webform

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -798,7 +798,7 @@ title-setting-register-like {
     padding-left: 5px;
     padding-right: 5px;
     text-align: center;
-    width: 190px;
+    width: 210px;
     font-size: 15px !important;
 }
 
